# t2linux-installer

./: .gitignore  Cargo.toml  LICENSE  README.md  distro-metadata.json
.cargo/: config.toml
scripts/: build.sh  release.sh
src/: authopen.rs  diskutil.rs  distro.rs  error.rs  install.py  install.rs  macos.rs  main.rs  partitioning.py
src/disk/: authopen.rs  diskutil.rs  lsblk.rs  mod.rs
src/ui/: app.rs  download_page.rs  finish_page.rs  install_page.rs  main_page.rs
