[package]
name = "t2linux-installer"
version = "0.1.0"
edition = "2021"
description = "Installation helper for linux on t2 macs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
iced = { version = "0.13.0", features = ["tokio"] }
plist = "1.6.1"
reqwest = { version = "0.12.5", features = ["stream", "blocking"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde"] }
zip = "2.1.3"

[package.metadata.bundle]
name = "t2linuxInstaller"
identifier = "org.t2linux.installer"
version = "0.1.0"
short_description = "Installation helper for linux on t2 macs."
long_description = """
A simple GUI app to help install linux on t2 macs. Supports downloading and flashing ISOs to external disks. This also supports shrinking the macOS partition to create free space.
"""
